Trying to make the enter button submit the ingredients. It works, but it is an ugly copy paste. There might be cleaner way to do with a loop. Please fix my code. :P

--- a/index.html
+++ b/index.html
@@ -134,6 +134,56 @@
 			}
 
 		};
+		var input = document.getElementById("ingredient-0");
+		input.addEventListener("keyup", function(event) {
+		  // Number 13 is the "Enter" key on the keyboard
+		  if (event.keyCode === 13) {
+			// Cancel the default action, if needed
+			event.preventDefault();
+			// Trigger the button element with a click
+			document.getElementById("submit").click();
+		  }
+		}); 
+		var input = document.getElementById("ingredient-1");
+		input.addEventListener("keyup", function(event) {
+		  // Number 13 is the "Enter" key on the keyboard
+		  if (event.keyCode === 13) {
+			// Cancel the default action, if needed
+			event.preventDefault();
+			// Trigger the button element with a click
+			document.getElementById("submit").click();
+		  }
+		}); 
+		var input = document.getElementById("ingredient-2");
+		input.addEventListener("keyup", function(event) {
+		  // Number 13 is the "Enter" key on the keyboard
+		  if (event.keyCode === 13) {
+			// Cancel the default action, if needed
+			event.preventDefault();
+			// Trigger the button element with a click
+			document.getElementById("submit").click();
+		  }
+		}); 
+		var input = document.getElementById("ingredient-3");
+		input.addEventListener("keyup", function(event) {
+		  // Number 13 is the "Enter" key on the keyboard
+		  if (event.keyCode === 13) {
+			// Cancel the default action, if needed
+			event.preventDefault();
+			// Trigger the button element with a click
+			document.getElementById("submit").click();
+		  }
+		}); 
+		var input = document.getElementById("ingredient-4");
+		input.addEventListener("keyup", function(event) {
+		  // Number 13 is the "Enter" key on the keyboard
+		  if (event.keyCode === 13) {
+			// Cancel the default action, if needed
+			event.preventDefault();
+			// Trigger the button element with a click
+			document.getElementById("submit").click();
+		  }
+		}); 
 	</script>
 </body>
 </html>
