--- a/index.html
+++ b/index.html
@@ -3,47 +3,47 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Cocktail Finder</title>
+	<title>Cocktail Compendium</title>
 	<link rel="stylesheet" type="text/css" href="styles.css" media="screen" />
 </head>
 <body>
 
 	<div class="upperContainer">
-		<h2>Cocktail Finder</h2>
+		<h2>Cocktail Compendium</h2>
 
 		<div class="inputContainer">
 			<div class="inputsColumn">
 				<input
 					id="ingredient-0"
-					onkeyup="onInputChange(this)"
+					onkeyup="onInputChange(this, event)"
 					onfocus="clearSuggestions()"
 					type="text"
 					placeholder="Ingredient"
 				/>
 				<input
 					id="ingredient-1"
-					onkeyup="onInputChange(this)"
+					onkeyup="onInputChange(this, event)"
 					onfocus="clearSuggestions()"
 					type="text"
 					placeholder="Ingredient"
 				/>
 				<input
 					id="ingredient-2"
-					onkeyup="onInputChange(this)"
+					onkeyup="onInputChange(this, event)"
 					onfocus="clearSuggestions()"
 					type="text"
 					placeholder="Ingredient"
 				/>
 				<input
 					id="ingredient-3"
-					onkeyup="onInputChange(this)"
+					onkeyup="onInputChange(this, event)"
 					onfocus="clearSuggestions()"
 					type="text"
 					placeholder="Ingredient"
 				/>
 				<input
 					id="ingredient-4"
-					onkeyup="onInputChange(this)"
+					onkeyup="onInputChange(this, event)"
 					onfocus="clearSuggestions()"
 					type="text"
 					placeholder="Ingredient"
@@ -77,8 +77,16 @@
 		var ingredientTokens = Array.from(allTokensSet);
 
 		var suggestionsContainer = document.getElementById("suggestions");
+		function clearSuggestions() {
+			suggestionsContainer.innerHTML = "";
+		}
 
-		function onInputChange(input) {
+		var submitBtn = document.getElementById("submit");
+		function onInputChange(input, event) {
+			if (event.keyCode === 13) {
+				event.preventDefault();
+				submitBtn.click();
+			}
 			var inputValue = input.value;
 			if (inputValue.length > 1) {
 				clearSuggestions();
@@ -95,12 +103,6 @@
 				});
 			}
 		}
-
-		function clearSuggestions() {
-			suggestionsContainer.innerHTML = "";
-		}
-
-		var submitBtn = document.getElementById("submit");
 
 		submitBtn.onclick = function() {
 			var matches = [...recipes];
@@ -135,58 +137,8 @@
 						resultContainer.appendChild(matchContainer);
 					});
 			}
-
 		};
-		var input = document.getElementById("ingredient-0");
-		input.addEventListener("keyup", function(event) {
-		  // Number 13 is the "Enter" key on the keyboard
-		  if (event.keyCode === 13) {
-			// Cancel the default action, if needed
-			event.preventDefault();
-			// Trigger the button element with a click
-			document.getElementById("submit").click();
-		  }
-		}); 
-		var input = document.getElementById("ingredient-1");
-		input.addEventListener("keyup", function(event) {
-		  // Number 13 is the "Enter" key on the keyboard
-		  if (event.keyCode === 13) {
-			// Cancel the default action, if needed
-			event.preventDefault();
-			// Trigger the button element with a click
-			document.getElementById("submit").click();
-		  }
-		}); 
-		var input = document.getElementById("ingredient-2");
-		input.addEventListener("keyup", function(event) {
-		  // Number 13 is the "Enter" key on the keyboard
-		  if (event.keyCode === 13) {
-			// Cancel the default action, if needed
-			event.preventDefault();
-			// Trigger the button element with a click
-			document.getElementById("submit").click();
-		  }
-		}); 
-		var input = document.getElementById("ingredient-3");
-		input.addEventListener("keyup", function(event) {
-		  // Number 13 is the "Enter" key on the keyboard
-		  if (event.keyCode === 13) {
-			// Cancel the default action, if needed
-			event.preventDefault();
-			// Trigger the button element with a click
-			document.getElementById("submit").click();
-		  }
-		}); 
-		var input = document.getElementById("ingredient-4");
-		input.addEventListener("keyup", function(event) {
-		  // Number 13 is the "Enter" key on the keyboard
-		  if (event.keyCode === 13) {
-			// Cancel the default action, if needed
-			event.preventDefault();
-			// Trigger the button element with a click
-			document.getElementById("submit").click();
-		  }
-		}); 
+
 	</script>
 </body>
 </html>
