--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
 	<script type="text/javascript" src="./animateTotalRecipesCount.js"></script>
 	<script type="text/javascript" src="./searchSuggestions.js"></script>
 	<script type="text/javascript" src="./clearInput.js"></script>
+	<script type="text/javascript" src="./modalizeRecipe.js"></script>
 	<script type="text/javascript" src="./search.js"></script>
 	<script type="text/javascript">
 		generateCocktailOfTheDay();
