--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<div class="subheadCta">
 				Search through
 				<span id="totalRecipesCount" class="totalRecipesCount"></span>
-				cocktails.
+				curated cocktails.
 			</div>
 			<div class="inputContainer">
 				<div class="searchCategoryTitle">
