--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 	<link rel="shortcut icon" href="favicon.svg" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="styles.css" media="screen" />
+	<script type="text/javascript" src="constants.js"></script>
 	<script type="text/javascript" src="recipes.js"></script>
 </head>
 <body>
