--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 	<link rel="shortcut icon" href="favicon.svg" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="styles.css" media="screen" />
+	<script type="text/javascript" src="balancetext.min.js"></script>
 	<script type="text/javascript" src="constants.js"></script>
 	<script type="text/javascript" src="recipes.js"></script>
 </head>
@@ -135,6 +136,7 @@
 	</div>
 	<div id="results" class="results topLevelContainer"></div>
 
+	<script type="text/javascript" src="./generateRecipeCard.js"></script>
 	<script type="text/javascript" src="./generateCocktailOfTheDay.js"></script>
 	<script type="text/javascript" src="./animateTotalRecipesCount.js"></script>
 	<script type="text/javascript" src="./searchSuggestions.js"></script>
