--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<div>
 					<span
 						id="showFavoritesAction"
-						class="showFavoritesAction"
+						class="favoritesAction"
 					>
 						Show favorites
 					</span>
@@ -145,11 +145,17 @@
 			<div class="inputContainer">
 				<button id="submitIngredients" class="submitBtn">Search</button>
 			</div>
-			<div id="resultsSummary" class="resultsSummary"></div>
+			<div class="resultsSummaryContainer">
+				<div id="resultsSummary" class="resultsSummary"></div>
+				<div id="clearFavoritesAction" class="favoritesAction hidden">
+					Clear favorites
+				</div>
+			</div>
 		</div>
 	</div>
 	<div id="results" class="results topLevelContainer"></div>
 
+	<script type="text/javascript" src="./js/favorites.js"></script>
 	<script type="text/javascript" src="./js/generateRecipeCard.js"></script>
 	<script type="text/javascript" src="./js/generateCocktailOfTheDay.js"></script>
 	<script type="text/javascript" src="./js/animateTotalRecipesCount.js"></script>
@@ -157,7 +163,6 @@
 	<script type="text/javascript" src="./js/clearInput.js"></script>
 	<script type="text/javascript" src="./js/modalizeRecipe.js"></script>
 	<script type="text/javascript" src="./js/search.js"></script>
-	<script type="text/javascript" src="./js/favorites.js"></script>
 	<script type="text/javascript">
 		generateCocktailOfTheDay();
 		animateTotalRecipesCount();
