--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 				curated cocktails.
 			</div>
 			<div class="favoritesAction showFavoritesAction">
-				<span id="showFavoritesAction">Show favorites</span>
+				<div></div>
+				<div id="showFavoritesAction">Show favorites</div>
 			</div>
 			<div class="inputContainer">
 				<div class="searchCategoryTitle">
@@ -139,7 +140,8 @@
 				id="clearFavoritesActionContainer"
 				class="favoritesAction clearFavoritesAction hidden"
 			>
-				<span id="clearFavoritesAction">Delete all favorites</span>
+				<div id="clearFavoritesAction">Delete all favorites</div>
+				<div id="backAction">Go back</div>
 			</div>
 		</div>
 	</div>
