Keep screen awake

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<script type="text/javascript" src="./js/lib/balancetext.min.js"></script>
 	<script type="text/javascript" src="./js/constants.js"></script>
 	<script type="text/javascript" src="./js/recipes.js"></script>
+	<script type="text/javascript" src="./js/screenWakeLock.js"></script>
 </head>
 <body>
 	<div class="upperContainer topLevelContainer">
