--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
 	<div id="results" class="results topLevelContainer"></div>
 
 	<script type="text/javascript" src="./js/favorites.js"></script>
+	<script type="text/javascript" src="./js/multiplier.js"></script>
 	<script type="text/javascript" src="./js/generateRecipeCard.js"></script>
 	<script type="text/javascript" src="./js/generateCocktailOfTheDay.js"></script>
 	<script type="text/javascript" src="./js/animateTotalRecipesCount.js"></script>
