--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@
 		generateCocktailOfTheDay();
 		animateTotalRecipesCount();
 	</script>
+	<script type="text/javascript" src="./js/showRequestedCocktail.js"></script>
+	<script type="text/javascript" src="./js/cocktailOfDayNotification.js"></script>
 </body>
 
 <svg class="hiddenSvg linkIcon" version="1.1" id="linkSvg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/2000/xlink" x="0px" y="0px"
