Search overhaul: fuzzy search!

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 	<link rel="stylesheet" type="text/css" href="./css/modal.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="./css/suggestions.css" media="screen" />
 
+	<script src="https://cdn.jsdelivr.net/npm/fuse.js@6.6.2"></script>
 	<script type="text/javascript" src="./js/lib/balancetext.min.js"></script>
+	<script type="text/javascript" src="./js/lib/caseUtils.js"></script>
+	<script type="text/javascript" src="./js/lib/recipeUtils.js"></script>
 	<script type="text/javascript" src="./js/constants.js"></script>
 	<script type="text/javascript" src="./js/recipes.js"></script>
 </head>
@@ -112,6 +115,7 @@
 	</div>
 	<div id="results" class="results topLevelContainer"></div>
 
+	<script type="text/javascript" src="./js/modalizeRecipe.js"></script>
 	<script type="text/javascript" src="./js/favorites.js"></script>
 	<script type="text/javascript" src="./js/multiplier.js"></script>
 	<script type="text/javascript" src="./js/generateRecipeCard.js"></script>
@@ -119,7 +123,6 @@
 	<script type="text/javascript" src="./js/animateTotalRecipesCount.js"></script>
 	<script type="text/javascript" src="./js/suggestions.js"></script>
 	<script type="text/javascript" src="./js/formController.js"></script>
-	<script type="text/javascript" src="./js/modalizeRecipe.js"></script>
 	<script type="text/javascript" src="./js/search.js"></script>
 	<script type="text/javascript">
 		generateCocktailOfTheDay();
