--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
 	<script type="text/javascript" src="./js/animateTotalRecipesCount.js"></script>
 	<script type="text/javascript" src="./js/suggestions.js"></script>
 	<script type="text/javascript" src="./js/formController.js"></script>
+	<script type="text/javascript" src="./js/searchResultsUi.js"></script>
 	<script type="text/javascript" src="./js/search.js"></script>
 	<script type="text/javascript">
 		generateCocktailOfTheDay();
