Allow window resize

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
 	<div id="results" class="results topLevelContainer"></div>
 
 	<script type="text/javascript" src="./js/modalizeRecipe.js"></script>
+	<script type="text/javascript" src="./js/recipesLayout.js"></script>
 	<script type="text/javascript" src="./js/favorites.js"></script>
 	<script type="text/javascript" src="./js/multiplier.js"></script>
 	<script type="text/javascript" src="./js/generateRecipeCard.js"></script>
@@ -123,7 +124,6 @@
 	<script type="text/javascript" src="./js/animateTotalRecipesCount.js"></script>
 	<script type="text/javascript" src="./js/suggestions.js"></script>
 	<script type="text/javascript" src="./js/formController.js"></script>
-	<script type="text/javascript" src="./js/searchResultsUi.js"></script>
 	<script type="text/javascript" src="./js/search.js"></script>
 	<script type="text/javascript">
 		generateCocktailOfTheDay();
